test/regress/bad-annotation.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(@"annotation

(;; STDERR ;;;
out/test/regress/bad-annotation.txt:3:1: error: annotations not enabled: "annotation
(@"annotation
^^^^^^^^^^^^^
out/test/regress/bad-annotation.txt:3:1: error: unexpected token "Invalid", expected a module field or a module.
(@"annotation
^^^^^^^^^^^^^
;;; STDERR ;;)
